# HabTrack

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: test_build_on_push_pr.yml
scripts/: task_view_to_pdf.py
src/: App.css  App.jsx  Constants.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  export.rs  lib.rs  main.rs  window.rs
src-tauri/src/db/: habits.rs  init.rs  mod.rs  ops.rs  todos.rs
src/components/: AddItemModal.jsx  AlertModal.jsx  BetterModal.jsx  CompletedTasksModal.jsx  Modal.jsx  Sidebar.jsx
src/utility/: AddRemoveItems.jsx  AddRemoveUpdateItems.jsx  CustomCarousel.jsx  HelpScreen.jsx  UpdateFrontend.jsx
src/views/HabitsView/: HabitGroup.jsx  Habits.jsx  HabitsView.jsx  Navbar3.jsx
src/views/StreaksWatchView/: Cal-chart.jsx  CalendarChart.jsx  DailyProgressTracker.jsx  Navbar2.jsx  StreaksWatchView.jsx  custom-cal-chart.jsx
src/views/TasksView/: DragDropContext.jsx  Navbar.jsx  Task.jsx  TaskGroup.jsx  TasksView.jsx
src/views/TasksView/Tomorrow/: TomorrowNavbar.jsx  TomorrowView.jsx  index.html  main.jsx
