[package]
name = "habtrack"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "dialog"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.31.0"
chrono = { version = "0.4.38", features = ["serde"] }
headless_chrome = "1.0.10"

[target.'cfg(windows)'.dependencies]
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
